# AlertGateway

./: .gitignore  .mcp.json  AGENTS.md  BUGS.md  CMakeLists.txt  LICENSE  PROJECT_MEMORY.md  TODO.md  readme.md  run.sh  run_1080p_4channel.sh  run_4k_4channel.sh  run_4k_4channel_to1080.sh  start.sh
.agents/: AGENTS.md
cmake/: aarch64-toolchain.cmake
config/: config.json  config_4k_18mbps.json  config_4k_8mbps.json  config_4k_candidate_20260719.json  config_4k_roi_candidate_20260720.json  config_multi_1080p_candidate.json  config_multi_1ch_scheduler_candidate.json  config_multi_4ch_candidate.json  config_multi_4ch_scheduler_1080p_candidate.json  config_multi_4ch_scheduler_4k_15fps_candidate.json  config_multi_4ch_scheduler_4k_candidate.json  config_multi_4ch_scheduler_4k_to1080_candidate.json  config_multi_4ch_scheduler_candidate.json  config_v4l2.json
docker/: Dockerfile.build
docs/: 3588学习计划.txt  4k_log_20260716001.txt  4k_log_20260716002.txt  4k_log_20260716003.txt  4k_log_20260716004.txt  4k_log_20260716005.txt  4k_log_20260716006.txt  4k_log_20260716007.txt  4k_log_20260716008.txt  4k_pull_stream_image_processing_plan.md  AlertGateway项目技术总结.md  Docker打包与部署方案.md  H264封装格式转换图解.html  HDMI-Sunshine自动切换方案.md  NPU官方demo测速对比记录.md  NV12渲染原理图解.html  RGA预处理加速方案.md  WebRTC远程桌面方案.md  YOLOv5s与YOLOv8s-NPU耗时对比测试记录.md  YOLOv8s-RK3588推理优化实验记录.md  YOLOv8s-RK3588推理性能优化路线.md  YOLOv8s-RK3588桌面六类数据集与微调方案.md  baseline_deployment_verification_2026-07-11.md  optimization_storyboard.html  perf_default.txt  perf_differentiated.txt  perf_performance.txt  performance_dashboard.html  架构图.html  检测框消失问题排查记录.md  第三阶段-设备树入门.md  第五阶段-MPP硬解.md  第五阶段-多媒体硬解完成记录.md  第六阶段-YOLOv8 NPU推理(板子端).md  第六阶段-YOLOv8摄像头实时推理.md  第六阶段-YOLOv8模型转换为RKNN格式.md
docs/4k/: 4K 闪烁解决计划.md  4K单路性能与多路并发学习计划.md  4K多路推理修改记录.html  4k_18m_inference_shared_output_20260714.md  4k_30fps_bitrate_validation_20260714.md  4k_6m_acceptance_20260713.md  4k_accuracy_finetune_and_int8_calibration.md  4k_bitrate_matrix_20260713.md  4k_detection_box_motion_metrics_20260716.md  4k_framerate_fix_20260713.md  4k_pull_stream_reproduction_20260713.md  README.md  pull_stream_file_shared_output_20260714.md  pull_stream_unique_4k_frame_probe_20260714.md  v4l2_4k_output_probe_20260714.md  单路双路多路兼容开发计划.md
docs/NPU全局调度/: NPU全局调度开发计划.md  NPU全局调度设计.md
docs/architecture/: alertgateway_architecture.html
docs/artifacts/: README.txt  activation_replacement_plan.json  baseline_channel_importance.txt  distillation_plan.json  structured_pruning_plan.json  yolov8s_baseline_model.yaml  yolov8s_c2f_internal.tsv  yolov8s_depth4_reduced_model.yaml  yolov8s_layer_dependency.tsv  yolov8s_pruned10_model.yaml  yolov8s_pruned5_model.yaml  yolov8s_pruned5r_model.yaml  yolov8s_relu6_model.yaml
notes/: blocking_queue.md  capture_thread_run.md  encode_thread.md  infer_encode_split.md  infer_thread.md  int8_quantization_migration.md  interview_qa.md  main_orchestration.md  mpp_encode.md  mqtt_reconnect.md  stream_thread.md  v4l2_capture.md  yolo_postprocess.md  说明.txt
runs/testsrc2/: 4k_framerate_metrics_20260713.txt  4k_repro_metrics_20260713.txt  config_4k_ab62_65_20260716006.json  config_4k_center_gated_size20_view_20260716.json  config_4k_center_gated_size30_view_20260716.json  config_4k_diag_20260716005.json  config_4k_diag_20260716006.json  config_4k_global_motion_size20_view_20260716.json  config_4k_motion_stats_20260716.json  config_4k_motion_stats_size30_20260716.json  config_4k_track_18m_20260715.json  config_pull_stream_18m_shared_output_20260714.json  config_pull_stream_unique_4k_20260714.json  config_testsrc2_4k.json  config_testsrc2_4k_12m.json  config_testsrc2_4k_18m.json  config_testsrc2_4k_6m.json  config_testsrc2_4k_8m.json  config_testsrc2_4k_all.json  config_testsrc2_4k_mismatch.json  config_testsrc2_4k_roi.json  config_testsrc2_4k_thumbnail.json  config_testsrc2_4k_tiling.json  config_v4l2_720p.json  motion_ab_size30_20260716.json  motion_ab_size30_20260716.md  motion_center_response_replay_20260716.json  motion_center_response_replay_20260716.md  motion_global_center_replay_20260716.json  motion_global_center_replay_20260716.md  motion_size_center_gated_full_sweep_20260716.json  motion_size_center_gated_full_sweep_20260716.md  motion_size_center_gated_replay_20260716.json  motion_size_center_gated_replay_20260716.md  motion_size_replay_20260716.json  motion_size_replay_20260716.md  motion_size_replay_sweep_20260716.json  motion_size_replay_sweep_20260716.md
src/: main.cpp
src/app/: ChannelPipeline.cpp  ChannelPipeline.hpp
src/capture/: CaptureThread.cpp  CaptureThread.hpp  IVideoSource.hpp  PullStreamThread.cpp  PullStreamThread.hpp
src/common/: BlockingQueue.hpp  Frame.hpp  FrameBufferPool.hpp  SharedDetections.hpp
src/detect/: DetectionReporter.cpp  DetectionReporter.hpp
src/encode/: EncodeThread.cpp  EncodeThread.hpp  font16x16.h
src/infer/: ImageProcessing.hpp  InferThread.cpp  InferThread.hpp  NpuInferenceScheduler.cpp  NpuInferenceScheduler.hpp  RknnNpuExecutor.cpp  RknnNpuExecutor.hpp  RockchipYoloPostprocess.cpp  RockchipYoloPostprocess.hpp  RoiFilter.cpp  RoiFilter.hpp  ThumbnailTask.cpp  ThumbnailTask.hpp  TilingTask.cpp  TilingTask.hpp  YoloPostprocess.cpp  YoloPostprocess.hpp
src/mqtt/: MqttThread.cpp  MqttThread.hpp
src/stream/: StreamThread.cpp  StreamThread.hpp
tools/: board_config.example.json  board_mcp.py  collect_calibration.py  convert_int8.py  export_native_640x480.py  export_native_candidates.py  readme.txt
tools/analysis/: analyze_motion_stats.py  replay_center_filter.py  replay_size_filter.py  test_analyze_motion_stats.py  test_replay_center_filter.py  test_replay_size_filter.py
tools/benchmark/: desktop_gt.json  evaluate_precision.py  image_processing_smoke.cpp  infer_camera_smoke.cpp  npu_scheduler_smoke.cpp  rknn_benchmark.cpp
tools/dataset/: apply_review_selection.py  check_dataset_stats.py  collect_desktop6_checklist.sh  distill_desktop6.py  distill_model.py  evaluate_rockchip_onnx_yolo.py  evaluate_rockchip_rknn_yolo.py  evaluate_test_per_class.py  evaluate_yolo_label_pairs.py  run_yolo_annotator.py  (+23 more)
(+14 files in other folders)
